--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,9 @@
     },
     "rules": {
       "comma-dangle": ["error", "never"],
-      "arrow-parens": ["error", "always"]
+      "arrow-parens": ["error", "always"],
+      "no-param-reassign": ["error", {
+        "props": false
+      }]
     }
 }
