--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -91,7 +91,7 @@ search:
 
 ## Do not consider these keys missing:
 ignore_missing:
-- 'activerecord.errors.*{accepted,blank,invalid,too_short,too_long}'
+- 'activerecord.errors.*'
 - 'models.currency.{suffix,prefix}.*'
 - 'models.money.currency_formats.*'
 - 'moment' # Inlined & minified JS code happen to require moment with a function call that got the minified name 't'
