Add Climate Tips and Take Action pages

--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,6 @@ SENDGRID_API_KEY=
 # with unneccesary test garbage.
 INTERCOM_APP_ID=
 INTERCOM_API_SECRET=
+
+# Instagram
+INSTAGRAM_ACCESS_TOKEN=
